--- a/css/index.css
+++ b/css/index.css
@@ -11,7 +11,7 @@
 }
 @font-face {
   src: url(../fonts/gilroy/Gilroy-Bold.ttf);
-  font-family: 'Gilroy-bold';
+  font-family: 'Gilroy-Bold';
 }
 body {
   font-family: 'Gilroy-Regular';
@@ -33,12 +33,31 @@ h1 {
 }
 h2 {
   text-transform: uppercase;
+  font-family: 'Gilroy-Bold';
 }
 
-header {
+button {
+  height: 65px;
+  width: 100%;
+  max-width: 350px;
+  border: 2px solid black;
+  border-radius: 12px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
+  transition: background 100ms ease-out;
+  font-family: 'Gilroy-Bold';
+  font-size: 20px;
+}
+
+button:hover {
+  background-color: #F2F2F2;
+}
+
+.container {
   width: 100%;
   max-width: 1400px;
-
   margin: 0 auto;
 }
 
@@ -49,8 +68,19 @@ header {
   align-items: center;
 }
 
+.flex-container-column-center {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+}
+
 .flex-1 {
   flex: 1;
+}
+
+.flex-reverse {
+  flex-flow: row-reverse;
 }
 
 .link {
@@ -62,4 +92,117 @@ header {
 
 .link:hover {
   border-bottom: 2px solid black;
+}
+
+header {
+  width: 100%;
+  max-width: 1400px;
+
+  margin: 1rem auto;
+}
+
+header input {
+  background-color: #F2F2F2;
+  border: none;
+  height: 45px;
+  width: 100%;
+  max-width: 200px;
+  padding-left: 48px;
+  border-radius: 50px;
+  color: #969696;
+  font-size: 1rem;
+  cursor: pointer;
+  background-image: url('../img/lupa.png');
+  background-repeat: no-repeat;
+  background-position: 18px center;
+  margin-right: 1rem;
+}
+
+header div .cart {
+  background-color: #f2f2f2;
+  height: 45px;
+  width: 45px;
+  border-radius: 50px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
+  transition: background 100ms ease-out;
+}
+
+.cart:hover {
+  background-color: #dbdbdb;
+}
+
+main .hero-section {
+  margin: 5rem auto 200px auto;
+}
+
+main .hero-section h2 {
+  font-family: 'Gilroy-Bold';
+  font-size: 104px;
+  line-height: 104px;
+  background: linear-gradient(270.06deg, #DADADA 20.97%, #9F9F9F 99.92%);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  background-clip: text;
+  text-fill-color: transparent;
+  padding-bottom: 3rem;
+  text-transform: none;
+}
+
+main .hero-section p {
+  max-width: 450px;
+  width: 100%;
+  margin-bottom: 108px;
+  font-size: 1.2rem;
+  line-height: 1.8rem;
+}
+
+main .hero-section button {
+  background-image: url(../img/Plus.png);
+  background-repeat: no-repeat;
+  background-position: 270px center;
+  padding-right: 40px;
+}
+
+main .product {
+  background-color: #F3F3F3;
+  border-radius: 8px;
+  padding: 64px;
+  margin-bottom: 200px;
+}
+
+main .product h2 {
+  font-size: 40px;
+}
+
+main .product span {
+  font-family: 'Gilroy-Bold';
+  margin-bottom: 64px;
+}
+
+main .cores-item {
+  width: 36px;
+  height: 36px;
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  margin: 64px 8px 32px 8px;
+}
+
+main .branco {
+  background-image: url(../img/branco.png);
+}
+
+main .dourado {
+  background-image: url(../img/dourado.png);
+}
+
+main .cinza {
+  background-image: url(../img/cinza.png);
+}
+
+main .grafite {
+  background-image: url(../img/grafite.png);
 }
