--- a/css/index.css
+++ b/css/index.css
@@ -13,12 +13,16 @@
   src: url(../fonts/gilroy/Gilroy-Bold.ttf);
   font-family: 'Gilroy-Bold';
 }
+@font-face {
+  src: url(../fonts/gilroy/Gilroy-Medium.ttf);
+  font-family: 'Gilroy-Medium';
+}
 body {
   font-family: 'Gilroy-Regular';
-  font-size: 1rem;
+  font-size: 1.2rem;
   font-weight: normal;
   font-style: normal;
-  line-height: 1.2rem;
+  line-height: 1.8rem;
 }
 ul {
   list-style: none;
@@ -34,6 +38,19 @@ h1 {
 h2 {
   text-transform: uppercase;
   font-family: 'Gilroy-Bold';
+  background: linear-gradient(270.06deg, #DADADA 20.97%, #9F9F9F 99.92%);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  background-clip: text;
+  text-fill-color: transparent;
+  padding-bottom: 3rem;
+  text-transform: none;
+}
+h3 {
+  font-family: 'Gilroy-Bold';
+  font-size: 40px;
+  color: black;
+  text-transform: uppercase;
 }
 
 button {
@@ -46,6 +63,7 @@ button {
   align-items: center;
   justify-content: center;
   cursor: pointer;
+  background: none;
   transition: background 100ms ease-out;
   font-family: 'Gilroy-Bold';
   font-size: 20px;
@@ -75,6 +93,14 @@ button:hover {
   align-items: center;
 }
 
+.section-margin-200 {
+  margin-bottom: 200px;
+}
+
+.section-margin-160 {
+  margin-bottom: 160px;
+}
+
 .flex-1 {
   flex: 1;
 }
@@ -97,8 +123,8 @@ button:hover {
 header {
   width: 100%;
   max-width: 1400px;
-
   margin: 1rem auto;
+  font-family: 'Gilroy-Medium';
 }
 
 header input {
@@ -155,8 +181,6 @@ main .hero-section p {
   max-width: 450px;
   width: 100%;
   margin-bottom: 108px;
-  font-size: 1.2rem;
-  line-height: 1.8rem;
 }
 
 main .hero-section button {
@@ -170,11 +194,12 @@ main .product {
   background-color: #F3F3F3;
   border-radius: 8px;
   padding: 64px;
-  margin-bottom: 200px;
 }
 
-main .product h2 {
+main aside.product h2 {
   font-size: 40px;
+  color: black;
+  background: none;
 }
 
 main .product span {
@@ -205,4 +230,47 @@ main .cinza {
 
 main .grafite {
   background-image: url(../img/grafite.png);
+}
+
+main .quality {
+  align-items: unset;
+}
+
+main .quality h2 {
+  font-size: 64px;
+  line-height: 64px;
+}
+
+main .quality .text-content {
+  width: 100%;
+  max-width: 581px;
+}
+
+main .banner {
+  width: 100%;
+  max-width: 1600px;
+  height: 720px;
+  background: url(../img/fundo-corra-como-se-o-mundo-dependesse-de-voce.png);
+  padding: 1rem;
+}
+
+main .banner span {
+  display: flex;
+  align-items: center;
+}
+
+main .banner img {
+  width: 45px;
+  height: 45px;
+  margin-right: 1rem;
+}
+
+main .banner p {
+  font-family: 'Gilroy-Bold';
+  font-size: 104px;
+  line-height: 104px;
+  letter-spacing: -2px;
+  text-transform: uppercase;
+  color: white;
+  position: relative;
 }
